STYLING: project page styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: index
 ---
 <div id="home" class="windowcontent">
   <div class="content">
+    <img src="https://res.cloudinary.com/susanjsp/image/upload/v1610243184/portfolio/gh-profile_hgiw0g.jpg" alt="Profile Image">
     <h2>Hi! I’m Susan, a full-stack developer. </h2>
     <p>I’m from Brisbane, AUS. I’m a previous health-care worker who’s passionate about the intersection between health and technology.</p>
     <div class="links">
