--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@ layout: index
 ---
 <div id="home" class="windowcontent">
   <div class="content">
-    <img src="https://res.cloudinary.com/susanjsp/image/upload/v1610243184/portfolio/gh-profile_hgiw0g.jpg" alt="Profile Image">
-    <h2>Hi! I’m Susan, a full-stack web developer. </h2>
-    <p>I'm a Pharmacy school and Full-Stack Bootcamp graduate.
-       I became interested in pursuing tech after experiencing the constant frustration of patients not being able to
-       use apps to their full potential due to small considerations being missed. I wanted to become involved in creating beautifully elegant,quality apps that integrate seamlessly into everyday life.</p>
-    <p>Coming from health and working in a customer-focused environment has taught me the importance of putting users first, and the power of embracing collaboration between professionals with different specialisations and skillsets.</p>
+    <img class="avatar" src="https://res.cloudinary.com/susanjsp/image/upload/v1610243184/portfolio/gh-profile_hgiw0g.jpg" alt="Profile Image">
+    <h2>Hi! I’m Susan </h2>
+    <p>I'm a full-stack developer based in Brisbane, Australia. </p>
     <div class="links">
+      <a href="/about" class="btn btn-links yellow"><i class="fas fa-user-circle"></i> about me</a>
       <a href="/projects" class="btn btn-links green"><i class="fas fa-briefcase"></i> projects</a>
       <a href="/contact" class="btn btn-links blue"><i class="fas fa-envelope-open-text"></i> contact</a>
-      <a href="{{ site.blog }}" class="btn btn-links purple" target="_blank"> <i class="fas fa-external-link-alt"></i> blog</a>
+      <!-- <a href="{{ site.blog }}" class="btn btn-links purple" target="_blank"> <i class="fas fa-external-link-alt"></i> blog</a> -->
     </div>
   </div>
 </div>
