--- a/projects/index.html
+++ b/projects/index.html
@@ -11,6 +11,7 @@ layout: project-index
       <div class="projects-card-top-btns">
         <a href="{{post.github_link}}" class="btn btn-project-circle"><i class="fab fa-github"></i></a>
         <a href="{{post.live_link}}" class="btn btn-project-circle"><i class="fas fa-external-link-alt"></i></a>
+        <!-- <div></div> -->
       </div>
     </div>
     <a href="{{ post.url }}">{{ post.title}}</a>
