styling: updated some line-height & margins, plus updated window size for about page

--- a/about.html
+++ b/about.html
@@ -11,6 +11,10 @@ layout: index
       use apps to their full potential. I wanted to become involved in creating and building elegant apps that seamlessly integrate into everyday life.</p>
     <p>Other factors that sparked my interest were the strong focus on collaboration and the supportive tech communities around me.
       Working in retail and health-care has taught me the importance of putting users first, and the power of embracing collaboration between professionals with different specialisations and skillsets.</p>
-    <p></p>
+    <h3>Technology</h3>
+    <p>I've been building primarily using Ruby on Rails & postgreSQL, but am currently teaching myself javascript so I can dive into more JS frameworks</p>
+    <div class="tech-stack">
+
+    </div>
   </div>
 </div>
