--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@ layout: index
 <div id="contact" class="windowcontent">
   <div class="content">
     <h2>Contact Me</h2>
-    <p>If you'd like to collaborate on a project together shoot me a message via email at <strong>susanjsp@protonmail.com</strong></p>
-    <p>Otherwise, come and find me on social media for a chat!</p>
+    <p>If you'd like to collaborate on a project together shoot me a message via email at <strong>'susanjsp@protonmail.com'.</strong><br>
+    Otherwise, come and find me on social media for a chat!</p>
     <div class="links">
       <a href="mailto:{{ site.email }}?subject=Email via Portfolio" class="btn btn-links green" target="_blank"><i class="fas fa-envelope-square"></i> email</a>
       <a href="{{ site.linkedin }}" class="btn btn-links pink" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
