some final changes

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,10 @@ layout: index
     <div class="links">
       <a href="mailto:{{ site.email }}?subject=Email via Portfolio" class="btn btn-links green" target="_blank"><i class="fas fa-envelope-square"></i><span class="animate-letters"> email</span></a>
       <a href="{{ site.linkedin }}" class="btn btn-links pink" target="_blank"><i class="fab fa-linkedin"></i><span class="animate-letters"> LinkedIn</span></a>
-      <a href="{{ site.github }}" class="btn btn-links purple" target="_blank"><i class="fab fa-github-alt"></i><span class="animate-letters"> Github</span></a>
       <a href="{{ site.twitter }}" class="btn btn-links blue" target="_blank"><i class="fab fa-twitter-square"></i><span class="animate-letters"> Twitter</span></a>
+      <a href="{{ site.github }}" class="btn btn-links purple" target="_blank"><i class="fab fa-github-alt"></i><span class="animate-letters"> Github</span></a>
       <a href="{{ site.codepen }}" class="btn btn-links yellow" target="_blank"><i class="fab fa-codepen"></i><span class="animate-letters"> CodePen</span></a>
+      <a href="{{ site.blog }}" class="btn btn-links red" target="_blank"><i class="fab fa-microblog"></i><span class="animate-letters"> Blog</span></a>
     </div>
   </div>
 </div>
