--- a/projects/index.html
+++ b/projects/index.html
@@ -18,8 +18,8 @@ layout: project-index
           <a href="{{ post.url }}">{{ post.title}}</a>
           <a href="{{ post.url }}"><img src="{{post.cover}}" alt="Desktop view for for {{post.title}}"></a>
           <div class="projects-card-btns">
-            <a href="{{post.github_link}}" class="btn btn-project green"><i class="fab fa-github-alt"></i></a>
-            <a href="{{post.live_link}}" class="btn btn-project blue"><i class="fas fa-link"></i></a>
+            <a href="{{post.github_link}}" class="btn btn-project"><i class="fab fa-github-alt"></i></a>
+            <a href="{{post.live_link}}" class="btn btn-project"><i class="fas fa-link"></i></a>
           </div>
         </div>
       {% endfor %}
