uploaded smaller images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: index
 ---
 <div id="home" class="windowcontent">
   <div class="content">
-    <img class="avatar" src="https://res.cloudinary.com/susanjsp/image/upload/v1610243184/portfolio/gh-profile_hgiw0g.jpg" alt="Profile Image">
+    <img class="avatar" src="https://res.cloudinary.com/susanjsp/image/upload/v1611120877/portfolio/gh-profile-lg_jxcjac.jpg" alt="Susan's Profile Image">
     <h2>Hi! I’m Susan </h2>
     <p>I'm a full-stack developer based in Brisbane, Australia. </p>
     <div class="links">
