changed colors, added accessibility stuff

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,9 +2,9 @@
 permalink: /projects
 layout: project-index
 ---
-<div id="projects" class="windowcontent">
+<main id="projects" class="windowcontent">
   <div class="content">
-    <h2>My projects</h2>
+    <h1>My projects</h1>
     <div class="projects-container">
       {% for post in site.categories.projects %}
         <div class="projects-card mac-window">
@@ -25,4 +25,4 @@ layout: project-index
       {% endfor %}
     </div>
   </div>
-</div>
+</main>
