--- a/about.html
+++ b/about.html
@@ -2,19 +2,21 @@
 permalink: /about
 layout: index
 ---
-<div id="about" class="windowcontent">
+<main id="about" class="windowcontent">
   <div class="content">
     <img class="avatar" src="https://res.cloudinary.com/susanjsp/image/upload/v1611120878/portfolio/profile0image-lg_mu4t9g.jpg" alt="Image of Susan, smiling at the camera.">
-    <h2>about me</h2>
-    <p>I studied Pharmacy and also graduated from a Full-Stack bootcamp at the end of 2020.
-      I became interested in pursuing tech after experiencing the constant frustration of patients not being able to
-      use apps to their full potential. I wanted to become involved in creating and building elegant apps that seamlessly integrate into everyday life.</p>
-    <p>Other factors that sparked my interest were the strong focus on collaboration and the supportive tech communities around me.
-      Working in retail and health-care has taught me the importance of putting users first, and the power of embracing collaboration between professionals with different specialisations and skillsets.</p>
-    <h3>Technology</h3>
-    <p>I've been building primarily using Ruby on Rails & postgreSQL, but am currently teaching myself javascript so I can dive into more JS frameworks</p>
-    <div class="tech-stack">
+    <article>
+      <h1>about me</h1>
+      <p>I studied Pharmacy and also graduated from a Full-Stack bootcamp at the end of 2020.
+        I became interested in pursuing tech after experiencing the constant frustration of patients not being able to
+        use apps to their full potential. I wanted to become involved in creating and building elegant apps that seamlessly integrate into everyday life.</p>
+      <p>Other factors that sparked my interest were the strong focus on collaboration and the supportive tech communities around me.
+        Working in retail and health-care has taught me the importance of putting users first, and the power of embracing collaboration between professionals with different specialisations and skillsets.</p>
+      <h2>Technology</h2>
+      <p>I've been building primarily using Ruby on Rails & postgreSQL, but am currently teaching myself javascript so I can dive into more JS frameworks</p>
+      <div class="tech-stack">
 
-    </div>
+      </div>
+    </article>
   </div>
-</div>
+</main>
