--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 ---
 layout: index
 ---
-<div id="home" class="windowcontent">
+<main id="home" class="windowcontent">
   <div class="content">
     <img class="avatar" src="https://res.cloudinary.com/susanjsp/image/upload/v1611120877/portfolio/gh-profile-lg_jxcjac.jpg" alt="Susan's Profile Image">
-    <h2>Hi! I’m Susan </h2>
+    <article>
+    <h1>Hi! I’m Susan </h1>
     <p>I'm a full-stack developer based in Brisbane, Australia. </p>
+    </article>
     <div class="links">
       <a href="/about" class="btn btn-links yellow"><i class="fas fa-user-circle"></i><span class="animate-letters"> about me</span></a>
       <a href="/projects" class="btn btn-links green"><i class="fas fa-briefcase"></i><span class="animate-letters"> projects</span></a>
@@ -13,4 +15,4 @@ layout: index
       <!-- <a href="{{ site.blog }}" class="btn btn-links purple" target="_blank"> <i class="fas fa-external-link-alt"></i> blog</a> -->
     </div>
   </div>
-</div>
+</main>
