changed header font

--- a/about.html
+++ b/about.html
@@ -6,17 +6,14 @@ layout: index
   <div class="content">
     <img class="avatar" src="https://res.cloudinary.com/susanjsp/image/upload/v1611120878/portfolio/profile0image-lg_mu4t9g.jpg" alt="Image of Susan, smiling at the camera.">
     <article>
-      <h1>about me</h1>
-      <p>I studied Pharmacy and also graduated from a Full-Stack bootcamp at the end of 2020.
+      <h1>About Me</h1>
+      <p>I'm currently transitiong from Pharmacy into tech, and looking for an entry-level Software Developer position.
         I became interested in pursuing tech after experiencing the constant frustration of patients not being able to
-        use apps to their full potential. I wanted to become involved in creating and building elegant apps that seamlessly integrate into everyday life.</p>
-      <p>Other factors that sparked my interest were the strong focus on collaboration and the supportive tech communities around me.
-        Working in retail and health-care has taught me the importance of putting users first, and the power of embracing collaboration between professionals with different specialisations and skillsets.</p>
+        use apps to their full potential. I wanted to become involved in creating intuitive and elegant apps that seamlessly integrate into everyday life.</p>
+      <p>Working in retail and health-care has taught me the importance of putting users first, and the power of embracing collaboration between professionals with different specialisations and skillsets.
+         I love that the tech community has such a strong focus on collaboration and building supportive communities.</p>
       <h2>Technology</h2>
       <p>I've been building primarily using Ruby on Rails & postgreSQL, but am currently teaching myself javascript so I can dive into more JS frameworks</p>
-      <div class="tech-stack">
-
-      </div>
     </article>
   </div>
 </main>
