--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 ---
 layout: index
 ---
-<div id="contact" class="windowcontent">
+<main id="contact" class="windowcontent">
   <div class="content">
-    <h2>Contact Me</h2>
-    <p>If you'd like to collaborate on a project together shoot me a message via email at <strong>'susanjsp@protonmail.com'.</strong><br>
-    Otherwise, come and find me on social media for a chat!</p>
+    <article>
+      <h1>Contact Me</h1>
+      <p>If you'd like to collaborate on a project together shoot me a message via email at <strong>'susanjsp@protonmail.com'.</strong><br>
+      Otherwise, come and find me on social media for a chat!</p>
+    </article>
     <div class="links">
       <a href="mailto:{{ site.email }}?subject=Email via Portfolio" class="btn btn-links green" target="_blank"><i class="fas fa-envelope-square"></i><span class="animate-letters"> email</span></a>
       <a href="{{ site.linkedin }}" class="btn btn-links pink" target="_blank"><i class="fab fa-linkedin"></i><span class="animate-letters"> LinkedIn</span></a>
@@ -15,4 +17,4 @@ layout: index
       <a href="{{ site.blog }}" class="btn btn-links red" target="_blank"><i class="fab fa-microblog"></i><span class="animate-letters"> Blog</span></a>
     </div>
   </div>
-</div>
+</main>
