add talks tab, updated copy on about page

--- a/about.html
+++ b/about.html
@@ -7,13 +7,11 @@ layout: index
     <img class="avatar" src="https://res.cloudinary.com/susanjsp/image/upload/v1611120878/portfolio/profile0image-lg_mu4t9g.jpg" alt="Image of Susan, smiling at the camera.">
     <article>
       <h1>About Me</h1>
-      <p>I'm currently transitioning from Pharmacy into tech, and looking for an entry-level Software Developer position.
-        I became interested in pursuing tech after experiencing the constant frustration of patients not being able to
-        use apps to their full potential. I wanted to become involved in creating intuitive and elegant apps that seamlessly integrate into everyday life.</p>
-      <p>Working in retail and health-care has taught me the importance of putting users first, and the power of embracing collaboration between professionals with different specialisations and skillsets.
-         I love that the tech community has such a strong focus on collaboration and building supportive communities.</p>
+      <p>I'm a graduate software developer currently learning the ropes of the tech industry. I became interested in pursuing tech after working as an Intern Pharmacist in the community, and coming across customers who were frustrated with the medication ordering apps that were available. This, coupled with the intense feeling that I wasn't doing enough to change people's lives, led me down the path of programming and technology. After completing Harvard's intro to CS course, I fell for coding hard, and the rest is history!</p>
+      <p>Despite my short career in health, I didn't come out empty handed. Working in retail and health-care has taught me the importance of putting customers first, and the power of embracing collaboration between professionals with different specialisations and skillsets.
+      </p>
       <h2>Technology</h2>
-      <p>I've been building primarily using Ruby on Rails & postgreSQL, but am currently teaching myself javascript so I can dive into more JS frameworks</p>
+      <p>I started out learning to code in C (in hindsight, this might not have been the greatest idea), then moved on to Ruby, Rails, Postgres and JavaScript at my bootcamp. Currently, I'm strongly immersed in the Microsoft ecosystem, using technologies such as C#, dotnet, Azure, SQL Server, docker, typescript and react in my day-to-day.</p>
     </article>
   </div>
 </main>
